pomerium-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: pomerium-proxy
  annotations:
    external-dns.alpha.kubernetes.io/hostname: 'authenticate.prueba.ticksar.com.ar'
