argocd-ingress.yaml
# --- ArgoCD: Ingress ----------------------------------------------------------
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    ingress.pomerium.io/policy: '[{"allow":{"and":[{"claim/groups":"ticksar"}]}}]'
spec:
  ingressClassName: pomerium
  tls:
    - hosts:
        - argo.osfatun.ticksar.com.ar
      secretName: argocd-tls
  rules:
    - host: argo.osfatun.ticksar.com.ar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
